--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/node": "^20.11.13",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "firebase": "^10.7.2"
+    "firebase": "^10.7.2",
+    "openai": "^4.26.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
